--- a/lab2/Task4.ipynb
+++ b/lab2/Task4.ipynb
@@ -67,7 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "# 1. Define Variables and Placeholders\n",
+    "## 1. Define Variables and Placeholders\n",
     "\n",
     "X = tf.placeholder(tf.float32, [None, 784]) #the first dimension (None) will index the images\n",
     "Y_ = tf.placeholder(tf.float32, [None,10])  # placeholder of correct values\n",
